--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "Serverless quiz API with AWS Lambda, Middy, JWT, and DynamoDB",
   "main": "src/functions/index.js",
   "scripts": {
-	"start": "sls offline",
+    "start": "sls offline",
     "deploy": "sls deploy",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
@@ -21,6 +21,9 @@
   },
   "homepage": "https://github.com/Kentska/Quiztopia-Api-exam#readme",
   "dependencies": {
+    "@middy/core": "^6.4.5",
+    "@middy/http-error-handler": "^6.4.5",
+    "@middy/http-json-body-parser": "^6.4.5",
     "aws-sdk": "^2.1692.0",
     "bcryptjs": "^3.0.2",
     "jsonwebtoken": "^9.0.2"
