--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "@middy/http-json-body-parser": "^6.4.5",
     "aws-sdk": "^2.1692.0",
     "bcryptjs": "^3.0.2",
+    "dotenv": "^17.2.3",
     "jsonwebtoken": "^9.0.2"
   }
 }
