--- a/serverless.yml
+++ b/serverless.yml
@@ -45,6 +45,10 @@ provider:
         - dynamodb:Query
         - dynamodb:Scan
       Resource: "arn:aws:dynamodb:eu-north-1:187296254059:table/Quiztopia*"
+
+plugins:
+  - serverless-dotenv-plugin
+  
 functions:
   login:
     handler: src/functions/auth/login.main
