--- a/serverless.yml
+++ b/serverless.yml
@@ -144,10 +144,19 @@ resources:
         AttributeDefinitions:
           - AttributeName: quizId
             AttributeType: S
+          - AttributeName: type
+            AttributeType: S
         KeySchema:
           - AttributeName: quizId
             KeyType: HASH
         BillingMode: PAY_PER_REQUEST
+        GlobalSecondaryIndexes:
+          - IndexName: type-index
+            KeySchema:
+              - AttributeName: type
+                KeyType: HASH
+            Projection:
+              ProjectionType: ALL
 
     QuiztopiaResultsTable:
       Type: AWS::DynamoDB::Table
