--- a/package.json
+++ b/package.json
@@ -27,7 +27,8 @@
     "aws-sdk": "^2.1692.0",
     "bcryptjs": "^3.0.2",
     "dotenv": "^17.2.3",
-    "jsonwebtoken": "^9.0.2"
+    "jsonwebtoken": "^9.0.2",
+    "uuid": "^8.3.2"
   },
   "devDependencies": {
     "serverless-dotenv-plugin": "^6.0.0"
