--- a/serverless.yml
+++ b/serverless.yml
@@ -42,6 +42,7 @@ provider:
         - dynamodb:PutItem
         - dynamodb:GetItem
         - dynamodb:Query
+        - dynamodb:DeleteItem
       Resource: "arn:aws:dynamodb:eu-north-1:187296254059:table/Quiztopia*"
 
 plugins:
