--- a/package.json
+++ b/package.json
@@ -4,8 +4,8 @@
   "description": "Serverless quiz API with AWS Lambda, Middy, JWT, and DynamoDB",
   "main": "src/functions/index.js",
   "scripts": {
-    "start": "sls offline",
-    "deploy": "sls deploy",
+    "start": "serverless offline",
+    "deploy": "serverless deploy",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "repository": {
